version/2.0/ripscrip/4.1-jpeg-images.md
# 4.1 JPEG Images

[◀ Prev: 4.0 Icons & Bitmaps](4.0-icons-and-bitmaps.md) · [Contents](README.md) · [Next: 4.2 Mouse Fields & Pointer ▶](4.2-mouse-fields-and-pointer.md)

Photographic images: a compressed image file already on the terminal, displayed scaled into an **image area** - a sub-region of the current viewport established by [RIP_IMAGE_STYLE](#rip_image_style). New in the 2.x generation, with no 1.54 counterpart.

_Decoder profile, scaling and palette-rendering internals are in the [JPEG images techspec](../techspecs/3.1-jpeg-images.md)._

## RIP_IMAGE

_Display a scalable photo type image_

|               |                  |
| ------------- | ---------------- |
| **Level**     | 1                |
| **Command**   | `p`              |
| **Arguments** | `res:4 filename` |

**Format:** `!|1p <res> <filename>` **Example:** `!|1p0000filename.jpg`

**Attributes used:** Write Mode, Viewport, Port, Base Math (current setting)

This command will physically take a JPEG image file that is located on the remote terminal's hard disk (like Icon files) and display it in the image area set by a [RIP_IMAGE_STYLE](#rip_image_style) command. See the RIP_IMAGE_STYLE command for more details on the options available to set for image viewing and manipulation. _(v2.A0)_

Display can also be triggered by receiving an image via [RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode) with an image file type, or by the `$(file.JPG$` playback prefix in a host command ([5.3 Local File Playback](5.3-local-playback.md#local-image-file-playback-display)). A host can confirm JPEG capability first with `$IFS(JPEG)$` ([5.1 Text Variables](5.1-text-variables.md#ifs)).

## RIP_IMAGE_STYLE

_Alter subsequent displayed image settings_

|               |                                          |
| ------------- | ---------------------------------------- |
| **Level**     | 1                                        |
| **Command**   | `i`                                      |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY flags:4 res:12` |

**Format:** `!|1i <x0> <y0> <x1> <y1> <flags> <res>` **Example:** `!|1i00008G5B0002000000000000`

**Attributes used:** Viewport, Port, Base Math (current setting)

This command alters the settings for subsequently received (or displayed) image files. RIPscrip supports the display of JPEG (Joint Photographic Experts Group) files. These files can be transmitted to the remote terminal and viewed. The `<x0>`, `<y0>`, `<x1>` and `<y1>` parameters determine the size of the image area in the current viewport. _(v2.A0)_

If the `<x0>`, `<y0>`, `<x1>` and `<y1>` parameters are all set to zero (0), then Image Viewing is disabled. Any explicitly viewed images, or any images received with [RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode) will be ignored (however they will be deleted if flag 2 is active - see below). _(v2.A0)_

If the image view area is larger than the current viewport size, then the image area size will be adjusted according to the viewport's current size to fit. _(v2.A0)_

The image will be scaled to fit inside the specified display region. If any of these coordinates extend beyond the dimensions of the viewport, they will be adjusted to fit. _(v2.A1)_

There is a `<flags>` parameter which alters some of the aspects of the image being displayed. These flags can be OR'd together to create a combination of various flag values. The possible flags are: _(v2.A0)_

| Value | Description |
| --- | --- |
| 1 | Maintain image aspect ratio - This will keep the image maintained in size no matter what the size of the display region is. If the region isn't perfectly proportioned in relation to the actual bitmap, then areas of the display region above and below the image will be blacked out (a margin), or possibly left and right depending on proportions of the bitmap. This will yield a visually accurate representation of the image. _(v2.A0)_ |
| 2 | Delete image definition when complete. This is only useful for images received via RIP_ENTER_BLOCK_MODE or via a UU-Encoded RIPscrip data block for text-only transfer. When the image is rendered on the screen, it's definition and/or local disk file is deleted automatically upon completion of the drawing process. _(v2.A1)_ |
| 4 | Do not clear the image area to the current background color before viewing the image. _(v2.A3)_ |
| 8 | Commit the color palette of the image (if any) to the actual video hardware/color lookup table. This is typically only of use when using the image style with GIF files. This flag is ignored with JPEGs. When active, any color palette in the image file to be displayed is used to alter the current video color system to make the image show up as close to the original image as possible. _(v2.A4)_ |

If no RIP_IMAGE_STYLE command is processed before a JPEG image is to be displayed, then the image area is defined to be the full size of the viewport in whatever port is currently active. When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is received (ie, the environment is reset), then the image area is also reset to the maximum size of the current viewport. _(v2.A3)_

No shipped 2.x-generation client ever implemented GIF support despite flag 8's description above naming it; JPEG is the only image format the engine decodes (see [ERRATA](ERRATA.md#gif-was-drafted-never-shipped)).

---

[◀ Prev: 4.0 Icons & Bitmaps](4.0-icons-and-bitmaps.md) · [Contents](README.md) · [Next: 4.2 Mouse Fields & Pointer ▶](4.2-mouse-fields-and-pointer.md)
