version/3.1/ripscrip/4.1-jpeg-images.md
# 4.1 JPEG Images

[◀ Prev: 4.0 Icons & Bitmaps](4.0-icons-and-bitmaps.md) · [Contents](README.md) · [Next: 4.2 Mouse Fields & Pointer ▶](4.2-mouse-fields-and-pointer.md)

_Reconstructed edition — every claim carries an evidence tag; see [Contents](README.md) for the legend._

This page covers photographic images — a capability of the 2.30/3.x generation with no 1.54 counterpart, and the flagship 3.x multimedia feature: SyncTERM's `RIPSCRIP030001` mode has no raster support at all, making JPEG display a clean 3.x-only differentiator. A host delivers a compressed image file to the terminal and displays it scaled into an **image area** — a sub-region of the current viewport established by [RIP_IMAGE_STYLE](#rip_image_style). JPEG is the only compressed image format in shipping 3.x: the ALPHA 4 draft also added GIF _(v2.A4)_, but GIF was dropped over LZW licensing before shipping, and PNG was announced but never shipped — see the [white paper](../text/RIPScrip-3.x-technical-whitepaper.txt). All JPEGs are 24-bit; the white paper notes support for the **GrayPEG** grayscale variants, and progressive ("display while downloading") rendering was advertised but noted as not working in RIPtel 3.1. Display can be triggered three ways: the [RIP_IMAGE](#rip_image) command, receiving an image via [RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode) with an image file type, or the `$(file.JPG$` playback prefix in a host command ([5.3 Local File Playback](5.3-local-playback.md#local-jpeg-playback--filejpg)). A host can confirm JPEG capability first with [`$IFS(JPEG)$`](5.1-text-variables.md#ifs). The 2.30 record is [4.1 in the v2.30 reference](../../2.30/ripscrip/4.1-jpeg-images.md); decoder profile, scaling and palette-rendering internals are in the [v2.30 JPEG techspec](../../2.30/techspecs/3.1-jpeg-images.md), and the file-role view is [6.1 Content File Roles](6.1-content-file-roles.md#jpeg-and-graypeg).

_Evidence: WP (§3.7.2, GrayPEG); HLP (jpeg\_ strings; readme progressive-display note); corpus (7 shipped JPEGs, 16 references)._

## RIP_IMAGE

_Display a scalable photo type image_

|               |                  |
| ------------- | ---------------- |
| **Level**     | 1                |
| **Command**   | `p`              |
| **Arguments** | `res:4 filename` |

**Format:** `!|1p <res> <filename>` **Example:** `!|1p0000ASTRO.JPG`

**Attributes used:** Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/4.1-jpeg-images.md#rip_image)) · HLP (`RIP_Image`; JPEG engine strings — jpegShow, LoadJPEGBuffer; the `$(FILE.JPG$` macro) · corpus (13 uses in 6 files, 16 JPEG references) — not in SyncTERM

This command will physically take a JPEG image file that is located on the remote terminal's hard disk (like Icon files) and display it in the image area set by a [RIP_IMAGE_STYLE](#rip_image_style) command. See the RIP_IMAGE_STYLE command for more details on the options available to set for image viewing and manipulation. _(v2.A0)_

The corpus's photo scenes (N2_PHOTO.RIP, N2_TITLE.RIP, IMAGES.RIP, FXSHWIMG.FN) cycle ASTRO/GALAXY/JUPITER/BEACH2/BRIDGE02/DUSK_SEA/FIRCLOUD JPEGs. SPECLEFX.RIP demonstrates the conditional slideshow idiom, the filename argument computed by the [macro layer](5.2-templates-and-conditionals.md) at execution time:

```text
!|1p0000<<IF $INUSE(TV,NEXT_IMG)$="0">>$-=NEXT_IMG=ASTRO.JPG$<<ENDIF>>$&NEXT_IMG$
```

— if the `NEXT_IMG` variable is unset, initialize it, then display whatever it dereferences to. FXSHWIMG.FN brackets its slow JPEG display with [RIP_SET_MOUSE_CURSOR](4.2-mouse-fields-and-pointer.md#rip_set_mouse_cursor) hourglass/arrow switches. _Evidence: corpus (SPECLEFX.RIP, FXSHWIMG.FN)._

## RIP_IMAGE_STYLE

_Alter subsequent displayed image settings_

|               |                                          |
| ------------- | ---------------------------------------- |
| **Level**     | 1                                        |
| **Command**   | `i`                                      |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY flags:4 res:12` |

**Format:** `!|1i <x0> <y0> <x1> <y1> <flags> <res>` **Example:** `!|1i1E4I80940004000000000000`

**Attributes used:** Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/4.1-jpeg-images.md#rip_image_style)) · HLP (`RIP_ImageStyle`; also the `$IMGSTYLE(cur,x0,y0,x1,y1)$` variable) · corpus (13 uses in 6 files) — not in SyncTERM

This command alters the settings for subsequently received (or displayed) image files. RIPscrip supports the display of JPEG (Joint Photographic Experts Group) files. These files can be transmitted to the remote terminal and viewed. The `<x0>`, `<y0>`, `<x1>` and `<y1>` parameters determine the size of the image area in the current viewport. _(v2.A0)_

If the `<x0>`, `<y0>`, `<x1>` and `<y1>` parameters are all set to zero (0), then Image Viewing is disabled. Any explicitly viewed images, or any images received with [RIP_ENTER_BLOCK_MODE](5.5-file-transfer-and-queries.md#rip_enter_block_mode) will be ignored (however they will be deleted if flag 4 or 8 are active - see below). _(v2.A0)_

If the image view area is larger than the current viewport size, then the image area size will be adjusted according to the viewport's current size to fit. _(v2.A0)_

The image will be scaled to fit inside the specified display region. If any of these coordinates extend beyond the dimensions of the viewport, they will be adjusted to fit. _(v2.A1)_

There is a `<flags>` parameter which alters some of the aspects of the image being displayed. These flags can be OR'd together to create a combination of various flag values. The possible flags are: _(v2.A0)_

| Value | Description |
| --- | --- |
| 1 | Maintain image aspect ratio - This will keep the image maintained in size no matter what the size of the display region is. If the region isn't perfectly proportioned in relation to the actual bitmap, then areas of the display region above and below the image will be blacked out (a margin), or possibly left and right depending on proportions of the bitmap. This will yield a visually accurate representation of the image. _(v2.A0)_ |
| 2 | Delete image definition when complete. This is only useful for images received via RIP_ENTER_BLOCK_MODE or via a UU-Encoded RIPscrip data block for text-only transfer. When the image is rendered on the screen, it's definition and/or local disk file is deleted automatically upon completion of the drawing process. _(v2.A1)_ |
| 4 | Do not clear the image area to the current background color before viewing the image. _(v2.A3)_ |
| 8 | Commit the color palette of the image (if any) to the actual video hardware/color lookup table. This is typically only of use when using the image style with GIF files. This flag is ignored with JPEGs. When active, any color palette in the image file to be displayed is used to alter the current video color system to make the image show up as close to the original image as possible. _(v2.A4)_ |

> **Editor's note:** flag 8 is paper-only in practice — it targets palette-carrying GIF files, and GIF was dropped over LZW licensing before any 3.x client shipped a decoder ([6.1](6.1-content-file-roles.md#file-roles)). The flag is documented here as the ALPHA 4 draft defined it. _Evidence: 2.00a4 (flag definition); WP (GIF dropped)._

If no RIP_IMAGE_STYLE command is processed before a JPEG image is to be displayed, then the image area is defined to be the full size of the viewport in whatever port is currently active. When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is received (ie, the environment is reset), then the image area is also reset to the maximum size of the current viewport. _(v2.A3)_

The example (N2_TITLE.RIP) sets flag 4 — don't clear the area first — for its inset newspaper photo. Corpus uses also appear in the truncated 12-character form `!|1i00009F6Q0004` with the reserved block omitted, which the shipping driver's truncation-tolerant parser accepts. _Evidence: corpus (N2_TITLE.RIP)._

---

[◀ Prev: 4.0 Icons & Bitmaps](4.0-icons-and-bitmaps.md) · [Contents](README.md) · [Next: 4.2 Mouse Fields & Pointer ▶](4.2-mouse-fields-and-pointer.md)
